# CCGoL

./: Cargo.toml  README.md  index.html
src/: app.rs  config_panel.rs  gridcanvas.rs  kernel_editor.rs  main.rs  play_controls.rs
src/gameoflife/: agent.rs
src/style/: custom.scss
