[package]
name = "cc-game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-agent = "0.1"
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "0.2"
rgb = "0.8"
hex = "0.4"
noise = "0.7"
js-sys = "0.3"
fluvio-wasm-timer = "0.2"
futures = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
